--- a/bio.html
+++ b/bio.html
@@ -47,11 +47,11 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h2><!-- <a href="#"> -->My Accomplishments</a></h2>
-									<p>My name is Doug and I graduated with a Master of Arts degree in Adult Education from the University of Phoenix in 2006 and a Bachelor of Science degree from the University of the State of New York, Regents College in 1995. I have spent over 25 years teaching and writing training for certification companies, Fortune 50 companies, and local colleges.</p>
+									<p>My name is Doug and I graduated with a Master of Arts degree in Adult Education from the University of Phoenix in 2005 and a Bachelor of Science degree from the University of the State of New York, Regents College in 1995. I have spent over 25 years teaching and writing training for certification companies, Fortune 50 companies, and local colleges.</p>
 									<p>I am also a veteran of the US Army, honorably discharged in 1995 as a Staff Sergent with 9 1/2 years of service. While enlisted, I learned the Russian language, I was named the 1987 Soldier of the Year for III Corps and Fort Hood, and I jumped out of perfectly good airplanes. Now I like to fish (catch and release), ride my motorcycle - though I do this less frequently these days, and walk on the beach whenever possible with my wife, Maria.</p>
 									<p>I've been quite inclusive of my accomplishments here. At the bottom of this page, there are links going back to January 1986. The timeline is from most recent back.</p>
 								</header>
-								<img src="images/dmac-headshot-11-13-23.jpg" alt="" />
+								<img src="images/dmac-headshot-11-13-23.jpg" alt="A Recent Picture of Doug McIntire" />
 							</article>
 
 						<!-- Posts -->
@@ -62,7 +62,7 @@
 										<h2><a href="#">CompTIA Network+ Certified (again)</a></h2>
 									</header>
 									<img src="images/comptia-network-certified-logo.jpg" alt="" height="124" width="300" />
-									<p>After months of training my Marketing Team collegues, I was the first to take my CompTIA Network+ certification examination. I passed. After my training, 75% of my team also passed on their first attempt.</p>
+									<p>After several hours of training my Marketing Team collegues, I was the first to take my CompTIA Network+ certification examination. I passed. After my training, 75% of my team also passed on their first attempt.</p>
 									<p>I was originally Network+ certified on Monday, March 15, 2004. My pervious Network+ certification is good for life. I didn't need to recertify, but I did to "lead by example" for the rest of the Marketing Team.</p>
 								</article>
 								<article>
@@ -122,10 +122,10 @@
 									<a href="bio2.html">2</a>
 									<a href="bio3.html">3</a>
 									<span class="extra">&hellip;</span>
-									<a href="bio8.html">8</a>
-									<a href="bio9.html">9</a>
 									<a href="bio10.html">10</a>
-									<a href="bio2.html" class="next">Next</a>
+									<a href="bio11.html">11</a>
+									<a href="bio12.html">12</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
