--- a/bio10.html
+++ b/bio10.html
@@ -45,81 +45,75 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><!-- <a href="#"> -->My Accomplishments &#151; Page 10</a></h2>
+									<h2>My Accomplishments &#151; Page 10</a></h2>
 									<p>Accomplishments page 10</p>
 								</header>
-
 							</article>
-
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">August 18, 1986 &#151; September 5, 1986</span>
-										<h2>I Attended and Graduated US Army Airborne School</h2>
-									</header>
-									<img src="images/army-jump-wings.jpg" alt="US Army Jump Wings" height="116" width="200" />
-									<p>The very first day, in formation at oh-dark-thirty, the commanding officer asked us who made a mistake, who didn't want to be there. It was very friendly, no threats, it was a promise to start the out processing right then and there. One-third of the people in formation stepped forward, before one minute of training. It ranked as one of the most bizarre things I've ever seen in my life.</p>
-									<p>"Blood Wings" were a constant conversation during my Airborne Training. The "black hats", the instructors at the school, said they weren't given anymore, but on graduation day, if you said the words, "All the way, Airborne," the black hat didn't put the pins on the back of the wings, and punched them into your chest. I was knocked all the way into the rank behind me when I said the words.</p>
-									<p>Graduating from Airborne School, gave me another modifer on my MOS. I was now a 31C1P-A4, signifying I was both a "Paratrooper", and Morse Code trained.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">July 3, 1986</span>
-										<h2>I Was Promoted to E-2 Today</h2>
-									</header>
-									<img src="images/e2-pvt.jpg" alt="E-2 Private Rank" height="250" width="204" />
-									<p>There was no pomp or circumstance, no ceremony, it just showed up on my LES (the Army's version of a pay stub). E-1 and E-2 are both privates, but now I got to put some rank insignia on my collar. <strong>Note:</strong> E-2 rank was referred to as "Mosquito Wings".</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">June 4, 1986 &#151; July 1, 1986</span>
-										<h2>I Attended &amp; Graduated International Morse Code School</h2>
-									</header>
-									<img src="images/morse-code.jpg" alt="International Morse Code" height="188" width="400" />
-									<p>I started International Morse Code School today at Fort Gordon, Georgia. This will add an A4 Identifier to my MOS. When I completed it, I became a 31C10-A4.</p>
-									<p>To graduate, we had to successfully send and receive 25 words per minute in Morse Code. A "word" was five characters. It was very challenging, and probably the catalyst that made me consider getting my Amateur Radio License years later.</p>
-									<p>On an interesting note, Rod Sterling, of "The Twilight Zone" fame, was the voice who taught us Morse Code in the training.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">March 1986 &#151; May 1986</span>
-										<h2>I Attended &amp; Graduated Advanced Individual Training (AIT) as a Radio Teletype Operator (31C10) &#151; Fort Gordon, Georgia</h2>
-									</header>
-									<img src="images/army-enlisted-signal-corp.jpg" alt="Enlisted Signal Corps Insignia" height="240" width="300" />
-									<p>Within a couple of days of graduating Basic Training, I was shipped off to Fort Gordon, Georgia to begin AIT. I graduated <em>Distinguished Honor Graduate</em> (top of my class) 13 weeks later.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">January 10 &#151; March 5, 1986</span>
-										<h2>US Army Basic Training &#151; Fort McClennan, Alabama</h2>
+										<span class="date">March 14, 1988</span>
+										<h2>I Graduated From The US Army NBC Defense Course</h2>
 									</header>
 									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
-									<p>I officially started Basic Training on Friday, January 10, 1986, and graduated approximately 2 months later on March 5, 1986. My mom and dad drove down from Iowa to see me graduate at Fort McClennan, Alabama, near the city of Anniston.</p>
+									<p>I graduated from the US Army Two Week (80 Hour) Nuclear, Biological, and Chemical Defense Course today. The training was at Fort Hood, Texas.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">January 3, 1986</span>
-										<h2>I Joined the US Army</h2>
+										<span class="date">February 22, 1988</span>
+										<h2>I Graduated From The Ammunition Supply Procedures Course</h2>
 									</header>
 									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
-									<p>Without a high school diploma or a GED, I joined the US Army as a Private (E-1). My MOS was 31C &#151; Radio Teletype Operator. I was shipped off to Fort McClennan, Alabama for inprocessing and Basic Training.</p>
+									<p>I graduated from the US Army Five Day (40 Hour) Ammunition Supply Procedures Course on this day. The training was at Fort Hood, Texas.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">January 4 &#151; February 3, 1988</span>
+										<h2>I Graduated "Honor Graduate" From The US Army Four Week Radio Teletypewriter Operator Course</h2>
+									</header>
+									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
+									<p>I graduated from the US Army Four Week (160 Hour) Radio Teletypewriter Operator Course on this day as "Honor Graduate". The training was at Fort Hood, Texas.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">January 28, 1988</span>
+										<h2>I was awarded the US Army Commendation Medal — Second Award</h2>
+									</header>
+									<img src="images/army-commendation-medal-1st-oak-leaf-cluster-01-28-1988-small-2.jpg" alt="US Army Commendation Medal — 1st Oak Leaf Cluster" height="300" width="400" /></a>
+									<p>For: "exceptional and meritorious achievement on 22 January 1988 while a member of Headquarters and Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas. Specialist Four McIntire's demonstration of superb qualities of leadership, initiative, outstanding soldierly appearance, and duty performance distinguished him among his contemporaries and resulted in his being selected "Fort Hood Soldier of the Year." He consistently obtained outstanding results which were directly attributable to his professional application of job knowledge and personal effort. His judgement, loyalty, and devotion to duty were in keeping with the finest traditions of the military service. Specialist Four McIntire's achievements reflect great credit upon him, Fort Hood, and the United States Army."</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">December 22, 1987</span>
+										<h2>Graduated "Honor Graduate" from the Primary Leadership Development Course (PLDC)</h2>
+									</header>
+									<img src="images/army-pldc-12-22-87-small.jpg" alt="Honor Graduate - PLDC" height="517" width="400" />
+									<p>Primary Leadership Development Course (PLDC) is the first of several Noncommissioned Officer Courses that are required for promotions. PLDC is required for promotion from Specialst 4 to Sergeant. It was a four-week course, during which I was selected as "Acting First Sergeant" for one of the four weeks (a rotating position). The training was held at Fort Hood, Texas, and I was selected as an Honor Graduate for the course.</p>
+									<p><strong>Note:</strong> PLDC has since been renamed to <em>Basic Learder Course</em>.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">November 12, 1987</span>
+										<h2>I was awarded the US Army Achievement Medal &#151; Second Award</h2>
+									</header>
+									<img src="images/army-achievement-medal.jpg" alt="US Army Achievement Medal" height="187" width="400" />
+									<p>For: "meritorious achievement in support of the Reforger '87 exercise "Certain Strike". As a Radio Teletype Team Chief, SP4 McIntire was instrumental in maintaining outstanding commications support in a rapidly changing battlefield environment. His team was consistently prepared to accomplish all tasks in record time upon occupation of new sites. His tremendous contributions measurable assisted the 1st Cavalry Division Artillery Headquarters in accomplishing its mission during the challenging exercise. This outstanding performance of duty is in keeping with the highest traditions of the United States Army."</p>
 								</article>
 							</section>
 
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio9.html" class="previous">Prev</a>
+									<a href="bio.html" class="previous">First</a>
 									<a href="bio.html" >1</a>
 									<a href="bio2.html">2</a>
 									<a href="bio3.html">3</a>
 									<span class="extra">&hellip;</span>
-									<a href="bio8.html">8</a>
 									<a href="bio9.html">9</a>
 									<a href="bio10.html" class="page active">10</a>
-									<!-- <a href="#" class="next">Next</a> -->
+									<a href="bio11.html">11</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
