--- a/bio12.html
+++ b/bio12.html
@@ -45,8 +45,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>My Accomplishments &#151; Page 6</a></h2>
-									<p>Accomplishments page 6</p>
+									<h2>My Accomplishments &#151; Page 12</a></h2>
+									<p>Accomplishments page 12</p>
 								</header>
 
 							</article>
@@ -55,61 +55,55 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">December 1995</span>
-										<h2>I Received an Award "In Recognition Of Outstanding Service": December  1995</h2>
+										<span class="date">August 18, 1986 &#151; September 5, 1986</span>
+										<h2>I Attended and Graduated US Army Airborne School</h2>
 									</header>
-									<img src="images/dell-recognition-of-outstanding-service-12-1995-small.jpg" alt="In Recognition Of Outstanding Service" height="309" width="400" />
-									<p>I received an award from Dell this month "In Recognition Of Outstanding Service".</p>
-									<p>"For providing an Outstanding Customer Experience representing the Dell belief that Customer Service is not only a department, but an attitude. Your efforts contribute to our success and are greatly appreciated."</p>
-									<p>Signed: Harvey Sanders, Major Accounts Customer Service Director, and Pam Achter, Quality Analyst.</p>
-									<p><strong>Note:</strong> This is the fourth month in a row.</p>
+									<img src="images/army-jump-wings.jpg" alt="US Army Jump Wings" height="116" width="200" />
+									<p>The very first day, in formation at oh-dark-thirty, the commanding officer asked us who made a mistake, who didn't want to be there. It was very friendly, no threats, it was a promise to start the out processing right then and there. One-third of the people in formation stepped forward, before one minute of training. It ranked as one of the most bizarre things I've ever seen in my life.</p>
+									<p>"Blood Wings" were a constant conversation during my Airborne Training. The "black hats", the instructors at the school, said they weren't given anymore, but on graduation day, if you said the words, "All the way, Airborne," the black hat didn't put the pins on the back of the wings, and punched them into your chest. I was knocked all the way into the rank behind me when I said the words.</p>
+									<p>Graduating from Airborne School, gave me another modifer on my MOS. I was now a 31C1P-A4, signifying I was both a "Paratrooper", and Morse Code trained.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">November 1995</span>
-										<h2>I Received an Award "In Recognition Of Outstanding Service": November 1995</h2>
+										<span class="date">July 3, 1986</span>
+										<h2>I Was Promoted to E-2 Today</h2>
 									</header>
-									<img src="images/dell-recognition-of-outstanding-service-11-1995-small.jpg" alt="In Recognition Of Outstanding Service" height="309" width="400" />
-									<p>I received an award from Dell this month "In Recognition Of Outstanding Service".</p>
-									<p>"For providing an Outstanding Customer Experience representing the Dell belief that Customer Service is not only a department, but an attitude. Your efforts contribute to our success and are greatly appreciated."</p>
-									<p>Signed: Harvey Sanders, Major Accounts Customer Service Director, and Pam Achter, Quality Analyst.</p>
-									<p><strong>Note:</strong> This is the third month in a row.</p>
+									<img src="images/e2-pvt.jpg" alt="E-2 Private Rank" height="250" width="204" />
+									<p>There was no pomp or circumstance, no ceremony, it just showed up on my LES (the Army's version of a pay stub). E-1 and E-2 are both privates, but now I got to put some rank insignia on my collar. <strong>Note:</strong> E-2 rank was referred to as "Mosquito Wings".</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">October 1995</span>
-										<h2>I Received an Award "In Recognition Of Outstanding Service": October 1995</h2>
+										<span class="date">June 4, 1986 &#151; July 1, 1986</span>
+										<h2>I Attended &amp; Graduated International Morse Code School</h2>
 									</header>
-									<img src="images/dell-recognition-of-outstanding-service-10-1995-small.jpg" alt="In Recognition Of Outstanding Service" height="309" width="400" />
-									<p>I received an award from Dell this month "In Recognition Of Outstanding Service". (Unfortunately they spelled my last name wrong.)</p>
-									<p>"For providing an Outstanding Customer Experience representing the Dell belief that Customer Service is not only a department, but an attitude. Your efforts contribute to our success and are greatly appreciated."</p>
-									<p>Signed: Cliff Mountain, Major Accounts Customer Service Director, and Pam Achter, Quality Analyst.</p>
-									<p><strong>Note:</strong> This is the second month in a row.</p>
+									<img src="images/morse-code.jpg" alt="International Morse Code" height="188" width="400" />
+									<p>I started International Morse Code School today at Fort Gordon, Georgia. This will add an A4 Identifier to my MOS. When I completed it, I became a 31C10-A4.</p>
+									<p>To graduate, we had to successfully send and receive 25 words per minute in Morse Code. A "word" was five characters. It was very challenging, and probably the catalyst that made me consider getting my Amateur Radio License years later.</p>
+									<p>On an interesting note, Rod Sterling, of "The Twilight Zone" fame, was the voice who taught us Morse Code in the training.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">September 1995</span>
-										<h2>I Received an Award "In Recognition Of Outstanding Service": September 1995</h2>
+										<span class="date">March 1986 &#151; May 1986</span>
+										<h2>I Attended &amp; Graduated Advanced Individual Training (AIT) as a Radio Teletype Operator (31C10) &#151; Fort Gordon, Georgia</h2>
 									</header>
-									<img src="images/dell-recognition-of-outstanding-service-09-1995-small.jpg" alt="In Recognition Of Outstanding Service" height="309" width="400" />
-									<p>I received an award from Dell this month "In Recognition Of Outstanding Service". (Unfortunately they spelled my last name wrong.)</p>
-									<p>"For providing an Outstanding Customer Experience representing the Dell belief that Customer Service is not only a department, but an attitude. Your efforts contribute to our success and are greatly appreciated."</p>
-									<p>Signed: Cliff Mountain, Major Accounts Customer Service Director, and Pam Achter, Quality Analyst.</p>
+									<img src="images/army-enlisted-signal-corp.jpg" alt="Enlisted Signal Corps Insignia" height="240" width="300" />
+									<p>Within a couple of days of graduating Basic Training, I was shipped off to Fort Gordon, Georgia to begin AIT. I graduated <em>Distinguished Honor Graduate</em> (top of my class) 13 weeks later.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">July 1, 1995</span>
-										<h2>I was Honorably Discharged from the US Army</h2>
+										<span class="date">January 10 &#151; March 5, 1986</span>
+										<h2>US Army Basic Training &#151; Fort McClennan, Alabama</h2>
 									</header>
-									<img src="images/honorable-discharge.jpg" alt="US Army Honorable Discharge" height="146" width="400" />
-									<p>I was honorably discharged today, for the second and last time. I spent 9 1/2 years in the US Army, almost to the day.</p>
-								</article><article>
+									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
+									<p>I officially started Basic Training on Friday, January 10, 1986, and graduated approximately 2 months later on March 5, 1986. My mom and dad drove down from Iowa to see me graduate at Fort McClennan, Alabama, near the city of Anniston.</p>
+								</article>
+								<article>
 									<header>
-										<span class="date">May 26, 1995</span>
-										<h2>Completed Dell New Hire CSD Training</h2>
+										<span class="date">January 3, 1986</span>
+										<h2>I Joined the US Army</h2>
 									</header>
-									<img src="images/dell-new-hire-csd-training-05-26-95-small.jpg" alt="US Army Seal" height="309" width="400" />
-									<p>While I was still "technically" in the US Army, I started working for Dell, hired in Customer Service Delivery (CSD). I completed the New Hire CSD Training today in CSD Group 10.</p>
+									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
+									<p>Without a high school diploma or a GED, I joined the US Army as a Private (E-1). My MOS was 31C &#151; Radio Teletype Operator. I was shipped off to Fort McClennan, Alabama for inprocessing and Basic Training.</p>
 								</article>
 							</section>
 
@@ -117,14 +111,14 @@
 							<footer>
 								<div class="pagination">
 									<a href="bio.html" class="previous">First</a>
-									<a href="bio5.html" >5</a>
-									<a href="bio6.html" class="page active">6</a>
-									<a href="bio7.html">7</a>
+									<a href="bio.html" >1</a>
+									<a href="bio2.html">2</a>
+									<a href="bio3.html">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="bio10.html">10</a>
 									<a href="bio11.html">11</a>
-									<a href="bio12.html">12</a>
-									<a href="bio12.html" class="next">Last</a>
+									<a href="bio12.html" class="page active">12</a>
+									<!-- <a href="#" class="next">Next</a> -->
 								</div>
 							</footer>
 
