--- a/bio2.html
+++ b/bio2.html
@@ -98,7 +98,7 @@
 										<h2>Erasure &#151; A Novel by Doug McIntire</h2>
 									</header>
 									<img src="images/erasure-novel.jpg" alt="Erasure" height="266" width="400" />
-									<p>After I finished my first novel before the end of November 2006, I started a second one I titled <strong>Erasure</strong>. I finished it on January 17, 2007 with 86,306 words</p>
+									<p>After I finished my first novel before the end of November 2006, I started a second one I titled <strong>Erasure</strong>. I finished it on January 17, 2007 with 86,306 words.</p>
 									<p><strong>Note:</strong>  This was my second novel!</p>
 								</article>
 								<article>
@@ -116,7 +116,7 @@
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio.html" class="previous">Prev</a>
+									<a href="bio.html" class="previous">First</a>
 									<a href="bio.html" >1</a>
 									<a href="bio2.html" class="page active">2</a>
 									<a href="bio3.html">3</a>
@@ -124,7 +124,7 @@
 									<a href="bio8.html">8</a>
 									<a href="bio9.html">9</a>
 									<a href="bio10.html">10</a>
-									<a href="bio3.html" class="next">Next</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
