--- a/bio3.html
+++ b/bio3.html
@@ -60,7 +60,7 @@
 									</header>
 									<img src="images/university-of-phoenix-logo.png" alt="University of Phoenix" height="134" width="300" />
 									<p>I attended the University of Phoenix, Online, to receive my <strong>Master of Arts Degree in Adult Eductation and Distance Learning</strong>. I found it somewhat ironic to receive a degree in distance learning <em>through</em> distance learning.</p>
-									<p>I started in May 2005. I graduated with 33 Semester Hours and a GPA of 3.97.</p>
+									<p>I started in May 2004. I graduated with 33 Semester Hours and a GPA of 3.97.</p>
 								</article>
 								<article>
 									<header>
@@ -109,7 +109,7 @@
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio2.html" class="previous">Prev</a>
+									<a href="bio.html" class="previous">First</a>
 									<a href="bio2.html">2</a>
 									<a href="bio3.html" class="page active">3</a>
 									<a href="bio4.html">4</a>
@@ -117,7 +117,7 @@
 									<a href="bio8.html">8</a>
 									<a href="bio9.html">9</a>
 									<a href="bio10.html">10</a>
-									<a href="bio4.html" class="next">Next</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
