--- a/bio4.html
+++ b/bio4.html
@@ -112,7 +112,7 @@
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio3.html" class="previous">Prev</a>
+									<a href="bio.html" class="previous">First</a>
 									<a href="bio3.html">3</a>
 									<a href="bio4.html" class="page active">4</a>
 									<a href="bio5.html">5</a>
@@ -120,7 +120,7 @@
 									<a href="bio8.html">8</a>
 									<a href="bio9.html">9</a>
 									<a href="bio10.html">10</a>
-									<a href="bio5.html" class="next">Next</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
