--- a/bio7.html
+++ b/bio7.html
@@ -56,67 +56,69 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Sunday, July 1, 1990</span>
-										<h2>US Army Honorable Discharge &#151; The First One</h2>
+										<span class="date">October 20, 1994</span>
+										<h2>I received a Certificate of Achievement &#151; 504th MI Brigade</h2>
 									</header>
-									<img src="images/honorable-discharge.jpg" alt="US Army Seal" height="146" width="400" />
-									<p>I didn't know it at the time, but before you can reenlist, you have to be discharged. I was honorably discharged today, although it was a Sunday, so I could reenlist tomorrow. I reenlisted for five years.</p>
-									<p>An interesting note, the person who reenlisted me, Tommy R. Franks, a Colonel at the time, was the General who was the Iraq War Commander several years later.</p>
+									<img src="images/army-certificate-of-achievement-10-20-1994-small.jpg" alt="Certificate of Achievement - 504th MI Brigade" />
+									<p>For: "Outstanding performance of duty while serving as the Brigade Rear Detachment First Sergeant during the conduct of III Corps Exercise Phantom Saber IV. Your ability to manage personned and taskings, and execute short notice missions greatly contributed to the over all success of the brigade. Your outstandand achievement reflects great credit upon you and the United States Army."</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">June 15, 1990</span>
-										<h2>Graduated from Interrogator School (MOS 97E) &#151; Fort Huachuca, Arizona</h2>
+										<span class="date">June 1, 1992</span>
+										<h2>Completed AN/GRQ-27(V) (Nickname GOLDWING) Systen 2 Training Course At Fort Gillim, Georgia</h2>
 									</header>
-									<img src="images/army-enlisted-military-intelligence.jpg" alt="Enlisted Military Intelligence" height="217" width="400" />
-									<p>I graduated from the Interrogator School in Fort Huachuca, Arizona, officially changing my MOS from 31C2P-A4 to 97E2P-A4. It also changed my "alignment" from Signal Corps to Military Intelligence.</p>
+									<img src="images/army-an-grq-27-v-nickname-goldwing-systen-2-trainng-course-ft-gillem-06-01-92-small.jpg" alt="Goldwing Training Certificate" height="320" width="400" />
+									<p>I completed the AN/GRQ-27(V) (Nickname GOLDWING) Systen 2 Training Course At Fort Gillim, Georgia. It was a 40-hour course. The equipment was designed to give real-time weather information, a critical aspect with artillery, since rounds travel in a high arc, making them suceptable to winds (and other weather phenomon) at the various altitudes.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">1990</span>
-										<h2>Graduated from the Defense Language Institute &#151; Russian Language</h2>
+										<span class="date">April 24, 1992</span>
+										<h2>Completed Russian Language Intermediate Training &#151; Brigham Young University, Provo, Utah</h2>
 									</header>
-									<img src="images/dli-presidio-of-monterey-california.jpg" alt="Defense Language Institute" height="208" width="400" />
-									<p>I graduated the one-year Russian Language Course from the Defense Language Institute at the Presidio of Monterey, in Monterey, California.</p>
+									<img src="images/army-byu-russian-04-24-92-small.jpg" alt="BYU Russian Language Refresher" height="309" width="400" />
+									<p>Attended two week intensive Russian Language refresher training at Brigham Young University in Provo, Utah.</p>
+									<p>Every two years, linguists were required to attend language refresher training. BYU has one of the most extensive language programs available, so during their summer and winter breaks, linguists from Fort Hood would be sent there for Language Refresher training.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">1989</span>
-										<h2>I Graduated from the 31C Basic Non-Commissioned Officer Course (BNCOC)</h2>
+										<span class="date">April 9, 1992</span>
+										<h2>I Graduated From The U.S. Message Text Format Course</h2>
 									</header>
-									<img src="images/fort-gordon-georgia.jpg" alt="" height="300" width="400" />
-									<p>I was sent back to Fort Gordon, Georgia to attend the 31C Basic Non-Commissioned Officer Course. This course is required to be promoted from Sergeant (E-5) to Staff Sergeant (E-6). Once again, I was "promoted" to "acting First Sergent", just as in PLDC. And again, it was a rotating position, so I only held the position for one week.</p>
+									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
+									<p>I graduated from the US Army Four Day (32 Hour) U.S. Message Text Format Course. The training was at Fort Hood, Texas.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">March 22, 1989</span>
-										<h2>I was awarded the US Army Commendation Medal — Third Award</h2>
+										<span class="date">January 2, 1992</span>
+										<h2>I was Awarded my Second Good Conduct Medal</h2>
 									</header>
-									<img src="images/army-commendation-medal-2nd-oak-leaf-cluster-03-22-1989-small-2.jpg" alt="US Army Commendation Medal — 2nd Oak Leaf Cluster" height="351" width="459" />
-									<p>For: "distinguishing himself by meritorious service while assigned as a Radio Teletypewriter Operator, Headquarters and Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas during the period of 24 September 1986 to 15 March 1989. He has consistently exceeded all standards and has set a precedence to emulate. He has been Soldier of the Quarter of Division Artillery, and Soldier of the Year of III Corps and Fort Hood. Sergeant McIntire's performance of duty reflects distinct credit on him, the 1st Cavalry Division, and the United States Army."</p>
+									<img src="images/good-conduct-medal.jpg" alt="US Army Good Conduct Medal - Second Award" height="180" width="400" />
+									<p>I was awarded the US Army Good Conduct Medal for three continuous years of active military service, from 3 January 1989 to 2 January 1992.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">January 2, 1989</span>
-										<h2>I Was Awarded My First Good Conduct Medal</h2>
+										<span class="date">September 12, 1991</span>
+										<h2>Completed Security Officer Training</h2>
 									</header>
-									<img src="images/good-conduct-medal.jpg" alt="US Army Good Conduct Medal - First Award" height="180" width="400" />
-									<p>I was awarded the US Army Good Conduct Medal for three continuous years of active military service, from 3 January 1986 to 2 January 1989.</p>
+									<img src="images/ast-security-officer-training-course-09-12-91-small-redacted.jpg" alt="Austin Security Knowledge Center" height="308" width="400" />
+									<p>While I was in the US Army, I worked part time on weekends as a Security Officer for a company called A.S.T. Security, Inc. in Belton, Texas.</p>
+									<p>This <em>Security Officer Training Course</em> was required to become a Commissioned Security Officer. Unlike the military, the main difference between a Non-Commissioned Security Officer and a Commissioned Security Officer is that a Commissioned Security Officer is allowed to carry a firearm. I completed the course through Austin Security Knowledge Center.</p>
+									<p><strong>Note:</strong> A.S.T. Security and Austin Security Knowledge are both out of business.</p>
 								</article>
 							</section>
 
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio6.html" class="previous">Prev</a>
-									<a href="bio.html">1</a>
-									<a href="bio2.html">2</a>
-									<a href="bio3.html" >3</a>
-									<span class="extra">&hellip;</span>
+									<a href="bio.html" class="previous">First</a>
 									<a href="bio6.html" >6</a>
 									<a href="bio7.html" class="page active">7</a>
 									<a href="bio8.html">8</a>
-									<a href="bio8.html" class="next">Next</a>
+									<span class="extra">&hellip;</span>
+									<a href="bio10.html">10</a>
+									<a href="bio11.html">11</a>
+									<a href="bio12.html">12</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
