--- a/bio8.html
+++ b/bio8.html
@@ -49,72 +49,77 @@
 									<h2><!-- <a href="#"> -->My Accomplishments &#151; Page 8</a></h2>
 									<p>Accomplishments page 8</p>
 								</header>
+
 							</article>
+
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">May 21, 1988</span>
-										<h2>I was Promoted to Sergeant (E-5)</h2>
+										<span class="date">August 15, 1991</span>
+										<h2>Promoted to Corporal at A.S.T Security</h2>
 									</header>
-									<img src="images/army-sergeant.jpg" alt="I was Promoted to Sergeant" height="263" width="235" />
-									<p>Sergeant and Staff Sergeant promotions happen by MOS and "points". Each month, promotion "points" were published, and if you were above the points listed, you were promoted. I always kept working on getting more points, by completing educational correspondence courses the Army provided, and other activities where I could. My efforts paid off and I was promoted on May 21, 1988.</p>
-									<p><strong>Note:</strong> I wish I could remember how many points I had. The maximum number was 1,000. I think I was above 900.</p>
+									<img src="images/ast-promotion-corporal-08-15-91-small.jpg" alt="AST - Promotion to Corporal" height="309" width="400" />
+									<p>While I was in the US Army, I worked part time on weekends as a Security Officer for a company called A.S.T. Security, Inc. in Belton, Texas. I started working for them in late 1990 or early 1991.</p>
+									<p>On this day, I was promoted to Coropral. Promotions were very rare at A.S.T. Security for part-time employees, so it was nice to receive one.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">March 14, 1988</span>
-										<h2>I Graduated From The US Army NBC Defense Course</h2>
+										<span class="date">March 13, 1991</span>
+										<h2>I received a Certificate of Achievement &#151; 163rd MI Battalion</h2>
+									</header>
+									<img src="images/army-certificate-of-achievement-03-13-1991-small.jpg" alt="The Blue Watch Certificate of Achievement" height="309" width="400" />
+									<p>"For Meritorious Achievement on the Army Physical Fitness Test for receiving a score of 274 Points."</p>
+									<p>The Army Physical Fitness Test consisted of three areas: Push-up, Sit-ups, and a 2-mile run. The highest score possible is 300 points, so 274 points was pretty good.</p>
+								</article>
+								<article>
+									<header>
+										<span class="date">February 18, 1991</span>
+										<h2>Completed 97E Basic Non-Commissioned Officer Course (BNCOC)</h2>
 									</header>
 									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
-									<p>I graduated from the US Army Two Week (80 Hour) Nuclear, Biological, and Chemical Defense Course today. The training was at Fort Hood, Texas.</p>
+									<p>I was sent back to Fort Huachuca, Arizona to attend the 97E (Interrogator) Basic Non-Commissioned Officer Course. This course is required for Staff Sergeants (E-6). I had already completed BNCOC as a 31C (Radio Teletype Operator), but it was required for 97E since I had changed my Military Occupational Speciality (MOS).</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">January 4 &#151; February 3, 1988</span>
-										<h2>I Graduated "Honor Graduate" From The US Army Four Week Radio Teletypewriter Operator Course</h2>
+										<span class="date">December 21, 1990</span>
+										<h2>Completed Russian Language Intermediate Training &#151; Brigham Young University, Provo, Utah</h2>
 									</header>
-									<img src="images/us-army-seal.jpg" alt="US Army Seal" height="200" width="200" />
-									<p>I graduated from the US Army Four Week (160 Hour) Radio Teletypewriter Operator Course on this day as "Honor Graduate". The training was at Fort Hood, Texas.</p>
+									<img src="images/army-byu-russian-12-21-90-small.jpg" alt="BYU Russian Language Refresher" height="309" width="400" />
+									<p>I completed the two week intensive Russian Language refresher training at Brigham Young University (BYU) in Provo, Utah.</p>
+									<p>Every two years, linguists were required to attend language refresher training. BYU has one of the most extensive language programs available, so during their summer and winter breaks, linguists from Fort Hood would be sent there for Language Refresher training.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">January 28, 1988</span>
-										<h2>I was awarded the US Army Commendation Medal — Second Award</h2>
+										<span class="date">August 1, 1990</span>
+										<h2>I was Promoted to Staff Sergeant (e-6)</h2>
 									</header>
-									<img src="images/army-commendation-medal-1st-oak-leaf-cluster-01-28-1988-small-2.jpg" alt="US Army Commendation Medal — 1st Oak Leaf Cluster" height="300" width="400" /></a>
-									<p>For: "exceptional and meritorious achievement on 22 January 1988 while a member of Headquarters and Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas. Specialist Four McIntire's demonstration of superb qualities of leadership, initiative, outstanding soldierly appearance, and duty performance distinguished him among his contemporaries and resulted in his being selected "Fort Hood Soldier of the Year." He consistently obtained outstanding results which were directly attributable to his professional application of job knowledge and personal effort. His judgement, loyalty, and devotion to duty were in keeping with the finest traditions of the military service. Specialist Four McIntire's achievements reflect great credit upon him, Fort Hood, and the United States Army."</p>
+									<img src="images/army-staff-sergeant.jpg" alt="" height="256" width="200" />
+									<p>I was promoted to Staff Sergeant (E-6) on this day.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">December 22, 1987</span>
-										<h2>Graduated "Honor Graduate" from the Primary Leadership Development Course (PLDC)</h2>
+										<span class="date">Sunday, July 1, 1990</span>
+										<h2>US Army Honorable Discharge &#151; The First One</h2>
 									</header>
-									<img src="images/army-pldc-12-22-87-small.jpg" alt="Honor Graduate - PLDC" height="517" width="400" />
-									<p>Primary Leadership Development Course (PLDC) is the first of several Noncommissioned Officer Courses that is required for promotion. PLDC is required for promotion from Specialst 4 to Sergeant. It was a four-week course, during which I was selected as "Acting First Sergeant" for one of the four weeks (a rotating position). The training was held at Fort Hood, Texas, and I was selected as an Honor Graduate for the course.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">November 12, 1987</span>
-										<h2>I was awarded the US Army Achievement Medal &#151; Second Award</h2>
-									</header>
-									<img src="images/army-achievement-medal.jpg" alt="US Army Achievement Medal" height="187" width="400" />
-									<p>For: "meritorious achievement in support of the Reforger '87 exercise "Certain Strike". As a Radio Teletype Team Chief, SP4 McIntire was instrumental in maintaining outstanding commications support in a rapidly changing battlefield environment. His team was consistently prepared to accomplish all tasks in record time upon occupation of new sites. His tremendous contributions measurable assisted the 1st Cavalry Division Artillery Headquarters in accomplishing its mission during the challenging exercise. This outstanding performance of duty is in keeping with the highest traditions of the United States Army."</p>
+									<img src="images/honorable-discharge.jpg" alt="US Army Seal" height="146" width="400" />
+									<p>I didn't know it at the time, but before you can reenlist, you have to be discharged. I was honorably discharged today, although it was a Sunday, so I could reenlist tomorrow. I reenlisted for five years.</p>
+									<p>An interesting note, the person who reenlisted me, Tommy R. Franks, a Colonel at the time, was the General who was the Iraq War Commander several years later.</p>
 								</article>
 							</section>
 
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio7.html" class="previous">Prev</a>
-									<a href="bio.html" >1</a>
+									<a href="bio.html" class="previous">First</a>
+									<a href="bio.html">1</a>
 									<a href="bio2.html">2</a>
-									<a href="bio3.html">3</a>
+									<a href="bio3.html" >3</a>
 									<span class="extra">&hellip;</span>
-									<a href="bio7.html">7</a>
+									<a href="bio7.html" >7</a>
 									<a href="bio8.html" class="page active">8</a>
 									<a href="bio9.html">9</a>
-									<a href="bio9.html" class="next">Next</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
