--- a/bio9.html
+++ b/bio9.html
@@ -45,8 +45,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><!-- <a href="#"> -->My Accomplishments &#151; Page 9</a></h2>
+									<h2>My Accomplishments &#151; Page 9</a></h2>
 									<p>Accomplishments page 9</p>
 								</header>
 
@@ -56,69 +55,68 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">August 26, 1987</span>
-										<h2>I was awarded the US Army Achievement Medal</h2>
+										<span class="date">June 15, 1990</span>
+										<h2>Graduated from Interrogator School (MOS 97E) &#151; Fort Huachuca, Arizona</h2>
 									</header>
-									<img src="images/army-achievement-medal-08-26-1987-small.jpg" alt="US Army Achievement Medal" />
-									<p>For: "meritorious achievement while a member of Headquarters and Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas. Specialist Four McIntire's demonstration of superb qualities of leadership, initiative, outstanding soldierly appearance, and duty performance distinguished him among his contemporaries and resulted in his being selected "Fort Hood Soldier of the Quarter" for the period 1 July 1987 to 30 September 1987. His accomplishments in a wide range of military and civilian activities set an example worthy of emulation and are in keeping with the highest traditions of the military service. Specialist Four McIntire's achievements reflect distinct credit upon him, his unit, and this command."</p>
+									<img src="images/army-enlisted-military-intelligence.jpg" alt="Enlisted Military Intelligence" height="217" width="400" />
+									<p>I graduated from the Interrogator School in Fort Huachuca, Arizona, officially changing my MOS from 31C2P-A4 to 97E2P-A4. It also changed my "alignment" from Signal Corps to Military Intelligence.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">August 19, 1987</span>
-										<h2>I was awarded the US Army Commendation Medal</h2>
+										<span class="date">1990</span>
+										<h2>Graduated from the Defense Language Institute &#151; Russian Language</h2>
 									</header>
-									<img src="images/army-commendation-medal-08-19-1987-small.jpg" alt="US Army Achievement Medal" />
-									<p>For: "distinguishing himself by meritorious achievement by being selected as the 1st Cavalry Division Soldier of the Quarter, Calendar Year 1987, while assigned to Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas, during the period 22 September 1986 to 31 August 1987. His superior knowledge, exemplary bearing, appearance and overall professionalism, enabled him to be selected as the most outstanding soldier of the quarter. His commitment to strive for perfection places him far above others of his grade and experience. He is an outstanding soldier and is truly deserving of the prestige and respect that he has earned through his untiring efforts and demonstrated abilities. Specialist Four McIntire's performance of duty reflects distinct credit on him, the 1st Cavalry Division, and the United States Army."</p>
+									<img src="images/dli-presidio-of-monterey-california.jpg" alt="Defense Language Institute" height="208" width="400" />
+									<p>I graduated the one-year Russian Language Course from the Defense Language Institute at the Presidio of Monterey, in Monterey, California.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">June 30, 1987</span>
-										<h2>I Was Awarded A Certificate Of Achievement &#151; Headquarters, Division Artillery, 1st Cavalry Division</h2>
+										<span class="date">1989</span>
+										<h2>I Graduated from the 31C Basic Non-Commissioned Officer Course (BNCOC)</h2>
 									</header>
-									<img src="images/certificate-of-achievement-06-30-87-redacted.jpg" alt="US Army Seal" height="309" width="400" />
-									<p>For: "Outstanding achievement today in being selected First Cavalry Division Artillery Soldier of the Quarter for the Third Quarter, 1987. The expertise you demononstrated in such areas as Military Bearing, Chain of Comand, Individual Weapons, Map Reading, Leadership, and a myriad of other subjects was most commendable and was clearly above that of your peers. Your knowledge, performance, and potential is most noteworthy. Your accomplishment is an example for all to emulate and reflects most favorable on yourself, your organization, and the First Cavalry Division Artillery."</p>
-									<p>This was the first step that led me to becoming Soldier of the Year for III Corps and Fort Hood in 1987.</p>
+									<img src="images/fort-gordon-georgia.jpg" alt="" height="300" width="400" />
+									<p>I was sent back to Fort Gordon, Georgia to attend the 31C Basic Non-Commissioned Officer Course. This course is required to be promoted from Sergeant (E-5) to Staff Sergeant (E-6). Once again, I was "promoted" to "acting First Sergent", just as in PLDC. And again, it was a rotating position, so I only held the position for one week.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 1, 1987</span>
-										<h2>I was Promoted To Specialist 4 (E-4)</h2>
+										<span class="date">March 22, 1989</span>
+										<h2>I was awarded the US Army Commendation Medal — Third Award</h2>
 									</header>
-									<img src="images/sp4-rank.jpg" alt="Specialist 4 Rank" height="210" width="184" />
-									<p>I was promoted to Specialist 4 (E-4) in the Army today.</p>
+									<img src="images/army-commendation-medal-2nd-oak-leaf-cluster-03-22-1989-small-2.jpg" alt="US Army Commendation Medal — 2nd Oak Leaf Cluster" height="351" width="459" />
+									<p>For: "distinguishing himself by meritorious service while assigned as a Radio Teletypewriter Operator, Headquarters and Headquarters Battery, Division Artillery, 1st Cavalry Division, Fort Hood, Texas during the period of 24 September 1986 to 15 March 1989. He has consistently exceeded all standards and has set a precedence to emulate. He has been Soldier of the Quarter of Division Artillery, and Soldier of the Year of III Corps and Fort Hood. Sergeant McIntire's performance of duty reflects distinct credit on him, the 1st Cavalry Division, and the United States Army."</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">January 22, 1987</span>
-										<h2>I Earned My High School Equivalency Certificate (GED) Today</h2>
+										<span class="date">January 2, 1989</span>
+										<h2>I Was Awarded My First Good Conduct Medal</h2>
 									</header>
-									<img src="images/ged-certificate-of-high-school-equivalency-01-22-87-small.jpg" alt="High School Equivalency Certificate (GED)" height="309" width="400" />
-									<p>The certificate said, "State of Texas Certificate of High School Equivalency is awarded to Douglas K. McIntire, who demonstrated satisfactory performance in the General Educational Development Testing Program that meets standards prescribed by the Texas Education Agency".</p>
-									<p>What it didn't say was that I scored in the top 3% of GED testers.</p>
-									<p>The Certificate also came with a note from Crosbie E. Saint, the Commanding General of III Corps and Fort Hood: "Congratulations on earning your High School Equivalency Certificate. This achievement is a significant step in your personal and professional development. Your efforts reflect a desire to be a better citizen and a better soldier. Education programs sharpen your mental slills and give you the essential background for future progress. You now have the basic credentials to move forward in a variety of ways. All best wishes for your continued success."</p>
+									<img src="images/good-conduct-medal.jpg" alt="US Army Good Conduct Medal - First Award" height="180" width="400" />
+									<p>I was awarded the US Army Good Conduct Medal for three continuous years of active military service, from 3 January 1986 to 2 January 1989.</p>
 								</article>
 								<article>
 									<header>
-										<span class="date">January 3, 1987</span>
-										<h2>I Was Promoted to Private First Class (E-3) Today</h2>
+										<span class="date">May 21, 1988</span>
+										<h2>I was Promoted to Sergeant (E-5)</h2>
 									</header>
-									<img src="images/army-private-first-class.jpg" alt="Private First Class" height="256" width="200" />
-									<p>Again without any pomp or circumstance, I was promoted to Private First Class, E-3 today. No one told me, there was no ceremony, it just showed up on my LES (Leave Earnings Statement), the Army's version of a pay stub, that I was now an E-3. E-2 and E-3 promotions are automatic, at six and twelve months respectively, assuming there aren't any problems. I changed the rank on my uniform to Private First Class, and I went on about my business.</p>
+									<img src="images/army-sergeant.jpg" alt="I was Promoted to Sergeant" height="263" width="235" />
+									<p>Sergeant and Staff Sergeant promotions happen by MOS and "points". Each month, promotion "points" were published, and if you were above the points listed, you were promoted. I always kept working on getting more points, by completing educational correspondence courses the Army provided, and other activities where I could. My efforts paid off and I was promoted on May 21, 1988.</p>
+									<p>An interesting note, the person who promoted me, Tommy R. Franks, a Colonel at the time, was the General who was the Iraq War Commander several years later.</p>
+									<p><strong>Note:</strong> I wish I could remember how many points I had. The maximum number was 1,000. I think I was above 900.</p>
 								</article>
 							</section>
 
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio8.html" class="previous">Prev</a>
-									<a href="bio.html" >1</a>
+									<a href="bio.html" class="previous">First</a>
+									<a href="bio.html">1</a>
 									<a href="bio2.html">2</a>
-									<a href="bio3.html">3</a>
+									<a href="bio3.html" >3</a>
 									<span class="extra">&hellip;</span>
-									<a href="bio8.html">8</a>
-									<a href="bio9.html"  class="page active">9</a>
+									<a href="bio8.html" >8</a>
+									<a href="bio9.html" class="page active">9</a>
 									<a href="bio10.html">10</a>
-									<a href="bio10.html" class="next">Next</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
