--- a/bio5.html
+++ b/bio5.html
@@ -56,6 +56,14 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">Q4 FY 1997</span>
+										<h2>I Was Awarded The Q4 FY97 Dell Major Accounts Customer Service Peer-to-Peer Award</h2>
+									</header>
+									<img src="images/dell-q4-1997-peer-to-peer-award-small.jpg" alt="Dell Major Accounts Customer Service Q4 1997 Peer-to-Peer Award" height="309" width="400" />
+									<p>I was awarded the Fourth Quarter Fiscal Year 1997 <em>Dell Major Accounts Customer Service Peer-to-Peer Award</em>. Quarterly, there are two awards given by each team, a Peer-to-Peer Award, and a Manager's Award. The Peer-to-Peer award was more "coveted", because it was determined by a vote from your peers. It is awarded for "quality customer support and teamwork."</p>
+								</article>
+								<article>
+									<header>
 										<span class="date">April 21, 1997</span>
 										<h2>I Passed the Microsoft Windows 95 Certification</h2>
 									</header>
@@ -64,11 +72,19 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">Q4 FY 1996</span>
+										<h2>I Was Awarded The Q4 FY96 Dell Major Accounts Customer Service Peer-to-Peer Award</h2>
+									</header>
+									<img src="images/dell-q4-1996-peer-to-peer-award-small.jpg" alt="Dell Major Accounts Customer Service Q4 1996 Peer-to-Peer Award" height="309" width="400" />
+									<p>I was awarded the Fourth Quarter Fiscal Year 1996 <em>Dell Major Accounts Customer Service Peer-to-Peer Award</em>. Quarterly, there are two awards given by each team, a Peer-to-Peer Award, and a Manager's Award. The Peer-to-Peer award was more "coveted", because it was determined by a vote from your peers. It is awarded for "quality customer support and teamwork."</p>
+								</article>
+								<article>
+									<header>
 										<span class="date">October 15, 1996</span>
 										<h2>I Passed the Certified Novell Administrator (CNA) Examination for Netware 3</h2>
 									</header>
 									<img src="images/novell-cna-small-10-15-96.jpg" alt="Novell CNA For Netware 3" height="309" width="400" />
-									<p>A passing score of 548 points was required, and I scored 566 points. The <em>Novell</em> tests are a little different than other tests. There are 25 possible questions, but as soon as you get above the passing score, the test stops and you pass.</p>
+									<p>I passed the Novell CNA For Netware 3 exam for version 3.12. A passing score of 548 points was required, and I scored 566 points. The <em>Novell</em> tests are a little different than other tests. There are 25 possible questions, but as soon as you get above the passing score, the test stops and you pass.</p>
 								</article>
 								<article>
 									<header>
@@ -81,35 +97,19 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">January 1996</span>
+										<span class="date">January 12, 1996</span>
 										<h2>I Graduated with a Bachelor of Science Degree in Liberal Arts</h2>
 									</header>
 									<img src="images/excelsior-college-logo.jpg" alt="Excelsior College" height="100" width="350" />
-									<p>I graduated from <em>The University of the State of New York, Regents College</em>, since renamed to <em>Excelsior College</em>. My degree was in Liberal Arts, with depth areas in Russian Language and Psychology. This college is known for taking military training, and College-Level Examination Program (CLEP) test scores for a degree.</p>
+									<p>I graduated from <em>The University of the State of New York, Regents College</em>, since renamed to <em>Excelsior College</em>. My degree was in Liberal Arts, with depth areas in Russian Language and Psychology. This college is known for taking military training and College-Level Examination Program (CLEP) test scores for a degree.</p>
 									<p>My Russian Language training in the military counted toward my degree, as did 127 Semester Hours of CLEP exams I had taken during my time in the US Army. My final GPA was 3.79 with 167 Semester Hours total.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">July 1, 1995</span>
-										<h2>I was Honorably Discharged from the US Army</h2>
-									</header>
-									<img src="images/honorable-discharge.jpg" alt="US Army Seal" height="146" width="400" />
-									<p>I was honorably discharged today, for the second and last time. I spent 9 1/2 years in the US Army, almost to the day.</p>
-								</article>
-								<article>
-									<header>
-										<span class="date">October 20, 1994</span>
-										<h2>I received a Certificate of Achievement &#151; 504th MI Brigade</h2>
-									</header>
-									<img src="images/army-certificate-of-achievement-10-20-1994-small.jpg" alt="Certificate of Achievement - 504th MI Brigade" />
-									<p>For: "Outstanding performance of duty while serving as the Brigade Rear Detachment First Sergeant during the conduct of III Corps Exercise Phantom Saber IV. Your ability to manage personned and taskings, and execute short notice missions greatly contributed to the over all success of the brigade. Your outstandand achievement reflects great credit upon you and the United States Army."</p>
 								</article>
 							</section>
 
 						<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="bio4.html" class="previous">Prev</a>
+									<a href="bio.html" class="previous">First</a>
 									<a href="bio4.html" >4</a>
 									<a href="bio5.html" class="page active">5</a>
 									<a href="bio6.html">6</a>
@@ -117,7 +117,7 @@
 									<a href="bio8.html">8</a>
 									<a href="bio9.html">9</a>
 									<a href="bio10.html">10</a>
-									<a href="bio6.html" class="next">Next</a>
+									<a href="bio12.html" class="next">Last</a>
 								</div>
 							</footer>
 
